--- a/redoStyle.css
+++ b/redoStyle.css
@@ -30,6 +30,10 @@ a {
     text-decoration: none;
 }
 
+li:hover {
+    color: darkgrey;
+}
+
 #logo {
     padding: 0;
     position: fixed;
@@ -42,6 +46,7 @@ a {
     max-width: 960px;
     display: block;
     font-family: Georgia, 'Times New Roman', Times, serif;
+    color: #ffffff;
 }
 
 .logoContainer {
@@ -118,4 +123,48 @@ p {
 #contentTitle {
     color: #4aaaa5;
     font-family: Georgia, 'Times New Roman', Times, serif;
+}
+
+#form {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 18px;
+}
+
+input[type=text] {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 2px;
+    box-sizing: border-box;
+    font-size: 16px;
+}
+
+textarea {
+    width: 100%;
+    padding: 60px 20px;
+    margin-top: 8px;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 2px;
+    box-sizing: border-box;
+    resize: none;
+}
+
+button {
+    background-color:#4aaaa5;
+    border: none;
+    border-radius: 2px;
+    color: white;
+    padding: 15px 30px;
+    text-decoration: none;
+    margin: 4px 2px;
+    cursor: pointer;
+    font-size: 16px;
+    
+}
+
+button:hover {
+    background-color: #4CC2AF;
 }
