--- a/redoStyle.css
+++ b/redoStyle.css
@@ -6,7 +6,7 @@ body {
 ul {
     list-style-type: none;
     margin: auto;
-    padding: 0;
+    padding-left: 30px;
     overflow: hidden;
     position: fixed;
     left: 0;
@@ -28,10 +28,6 @@ a {
     font-size: 16px;
     color: #777777;
     text-decoration: none;
-}
-
-li:hover {
-    color: darkgrey;
 }
 
 #logo {
@@ -107,7 +103,7 @@ li:hover {
     font-family: Arial, Helvetica, sans-serif;
 }
 
-img {
+.imgIndex {
     width: 25%;
     height: 25%;
     float: left;
@@ -167,4 +163,41 @@ button {
 
 button:hover {
     background-color: #4CC2AF;
+}
+
+.imgSize {
+    height: 25%;
+    width: 25%;
+}
+
+#rightImg {
+    height: 25%;
+    width: 25%;
+    margin-left: 20px;
+}
+
+.image {
+    position: relative;
+    width: 30%;
+    height: 30%;
+}
+
+.h3Profile {
+    position: relative;
+    top: -80px;
+    width: 400px;
+    height: 40px;
+    line-height: 40px;
+    background-color: #4aaaa5;
+    text-align: center;
+    color: #ffffff;
+}
+
+.row {
+    display: flex;
+}
+
+.column {
+    margin: 15px;
+    margin-left: 0px;
 }
